[project]
name = "podcast-processor"
version = "0.1.0"
description = "Process podcast audio files to generate YouTube-ready content"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
podcast-process = "podcast_processor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_processor"]
